--- a/css.css
+++ b/css.css
@@ -1,3 +1,7 @@
+/* -------------------------- */
+/* Basic Setup */
+/* -------------------------- */
+
 @import url(https://fonts.googleapis.com/css?family=Exo);
 
 * {
@@ -15,6 +19,10 @@
 body {
     overflow: hidden;
 }
+
+/* -------------------------- */
+/* Content */
+/* -------------------------- */
 
 #content {
     font-size: 25px;
@@ -49,6 +57,7 @@ body {
     cursor: pointer;
     opacity: 0;
     outline: 0;
+    animation: bounce 2s ease-in-out infinite;
 }
 
 .musicNotification::before {
@@ -66,15 +75,34 @@ body {
     outline: 0;
 }
 
+@keyframes bounce {
+    0% { 
+        -webkit-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px); 
+    }
+    
+    50% { 
+        -webkit-transform: translateY(-5px);
+        -ms-transform: translateY(-5px);
+        transform: translateY(-5px); 
+    }
+    
+    100% { 
+        -webkit-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px); 
+    }
+}
+
+
 .mario {
-    position: absolute;
     left: 0;
 }
 
 .coin {
-    position: absolute;
     height: 40px;
-    margin-top: 300px;
+    top: 0;
     margin-left: 701px;
     opacity: 0;
 }
